Revision history for Email-Sender

{{$NEXT}}

2.500     2021-07-04 13:26:47-04:00 America/New_York
        - version bumped to account for change in fractional part precision

1.500     2021-06-20 20:30:24-04:00 America/New_York
        - adjust version number for bookkeeping reasons

1.300036  2021-06-17 09:51:12-04:00 America/New_York
        - add "maybestarttls" option, to allow opportunistic STARTTLS
          (thanks, Marc Bradshaw!)

1.300035  2020-10-10 12:34:29-04:00 America/New_York
        - drop some needless version checking from the days when we worked with
          broken Net::SMTPs (thanks, Bernhard Graf and Aristotle Pagaltzis and
          Pali Rohár)
        - documentation tweaks and spelling corrections (thanks, James E
          Keenan, Stefan Hornburg, M Somerville, and jazzkutya)

1.300034  2019-12-02 22:21:58-05:00 America/New_York
        - add documentation for the SMTP "hosts" parameter!

1.300033  2019-11-26 14:44:51-05:00 America/New_York
        - no changes since 1.300031

1.300032  2019-11-15 00:32:03-05:00 America/New_York (TRIAL RELEASE)
        - SMTP transport can now accept a "hosts" init arg instead of just
          "host"; this argument is an arrayref of host names to try in order
          (thanks, Marc Bradshaw!)

1.300031  2017-04-04 14:35:42-04:00 America/New_York
        - EMAIL_SENDER_TRANSPORT did not properly handle the =-prefix case
          Now: =Foo::Bar expands to Foo::Bar, Foo::Bar expands to Foo::Bar,
          and FooBar expands to Email::Sender::Transport::FooBar, as intended.

          Previously, =Foo::Bar expanded to Email::Sender::Transport::Foo::Bar

1.300030  2016-10-03 18:33:57-04:00 America/New_York
        - no changes since 1.300029

1.300029  2016-07-17 15:49:18-04:00 America/New_York (TRIAL RELEASE)
        - bring localpart quoting more in line with RFC 821

1.300028  2016-04-21 17:49:14+01:00 Europe/London
        - make Email::Sender::Util->easy_transport public
