@@ -19,7 +19,7 @@ use Sub::Exporter -setup => {
   },
 };
 
-use Email::Address;
+use Email::Address::XS;
 use Email::Sender::Transport;
 use Email::Sender::Util;
 use Try::Tiny;
@@ -143,10 +143,9 @@ sub _get_to_from {
   my $to = $arg->{to};
   unless (@$to) {
     my @to_addrs =
-      map  { $_->address               }
-      grep { defined                   }
-      map  { Email::Address->parse($_) }
-      map  { $email->get_header($_)    }
+      map  { $_->address                   }
+      map  { Email::Address::XS->parse($_) }
+      map  { $email->get_header($_)        }
       qw(to cc);
     $to = \@to_addrs;
   }
@@ -154,10 +153,9 @@ sub _get_to_from {
   my $from = $arg->{from};
   unless (defined $from) {
     ($from) =
-      map  { $_->address               }
-      grep { defined                   }
-      map  { Email::Address->parse($_) }
-      map  { $email->get_header($_)    }
+      map  { $_->address                   }
+      map  { Email::Address::XS->parse($_) }
+      map  { $email->get_header($_)        }
       qw(from);
   }
 
