@@ -1,6 +1,7 @@
 Revision history for Email-Sender
 
 {{$NEXT}}
+        - replace use of Email::Address with Email::Address::XS
 
 2.500     2021-07-04 13:26:47-04:00 America/New_York
         - version bumped to account for change in fractional part precision
